appId: org.ton.demowallet
env:
    PASSWORD: 1111
    DAPP_URL: https://allure-test-runner.vercel.app/e2e
---
- launchApp

- runFlow:
    file: flows/unlock-wallet.yaml
    env:
        PASSWORD: ${PASSWORD}

- openLink:
    link: ${DAPP_URL}
    browser: true

- assertVisible:
    text: "Connect Wallet"
    enabled: true

- tapOn: "Connect Wallet"

- assertVisible:
    text: "Tonkeeper"

- tapOn: "Tonkeeper"

- assertVisible:
    text: "Open"

- tapOn: "Open"

- assertVisible:
    id: connect-approve
- tapOn:
    id: connect-approve

- openLink:
    link: ${DAPP_URL}
    browser: true

- scrollUntilVisible:
    element: "Disconnect Wallet"

- tapOn: "Disconnect Wallet"
